@@ -2,7 +2,7 @@
  OmegaT 2.3.0 update 4
 ----------------------------------------------------------------------
    0 Enhancement
-   2 Bug fixes
+   3 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
 2.3.0 update 4 vs. 2.3.0 update 3
@@ -14,6 +14,9 @@
 
   - When several dictionaries were used, words written in uppercase in 
 the dictionaries could fail to be recognised
+
+  - NetBSD and DragonFky not recognized as UNIX
+  http://sourceforge.net/support/tracker.php?aid=3451034
 
   Localisation updates:  
   - Slovenian localisation updated to 2.3 (UI)
